<resources>
    <string name="app_name">NutriScan</string>
    <string name="calories">Calories</string>
    <string name="total_fat">Total Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="total_carbohydrate">Total Carbohydrate</string>
    <string name="protein">Protein</string>
    <string name="nutrition_summary">Nutrition Summary</string>
    <string name="scan_history">Scan History</string>
    <string name="sample_upc">0123456789012</string>
    <string name="sample_food_name">Sample</string>
    <string name="sample_calories">2313 kcal</string>
    <string name="sample_amount">5.6 g</string>
    <string name="sample_amount2">7 mg</string>
    <string name="sample_amount3">340 mg</string>
    <string name="scan">Scan</string>
</resources>
